--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -37,8 +37,25 @@ body{
 }
 
 
-#category-section a:hover{
-	color: #55CE60;
+
+#category-section a {
+	text-decoration: none;
+	color: #696969;
+}
+#category-section img {
+	width: 40px;
+	margin-right: 15px;
+	margin-left: 20px;
+}
+
+#category-section p{
+	background-color: #fff; 
+	border-radius: 4px; 
+	padding-top: 15px; 
+	padding-bottom: 15px; 
+	border: 1px solid #f4ca4b;
+	font-size: 14px;
+	font-weight: 500;
 }
 
 
@@ -49,12 +66,16 @@ body{
 
 	#category-section img {
 		width: 20px;
-		margin-right: 10px;
+		margin-left: 10px;
+		margin-right: 5px;
 		border-radius: 2px;
 	}
 
 	#category-section p{
-		font-size: 10px;
+		font-size: 11px;
+		padding-top: 10px; 
+		padding-bottom: 10px; 
+		font-weight: 500;
 	}
 
 
