--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -53,10 +53,16 @@ body{
 	border-radius: 4px; 
 	padding-top: 15px; 
 	padding-bottom: 15px; 
-	border: 1px solid #f4ca4b;
+	border-left: 2px solid #f4ca4b;
 	font-size: 13px;
 	font-weight: 500;
 }
+
+
+#category-section p:hover{
+	color: #FFA012;
+}	
+
 
 
 
