--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -88,6 +88,14 @@ body{
 
 }
 
+#allproducts-section .uk-card{
+		width: 15rem;
+}
+
+#newproduct-section .uk-card{
+	width: 15rem;
+}
+
 
 
 @media(max-width: 400px){
@@ -111,7 +119,28 @@ body{
 		font-size: 12px;
 	}
 
+
+	#newproduct-section .uk-button{
+		padding-left:5px;
+		padding-right:5px;
+		margin: 0px;
+		font-size: 12px;
+	}
+
+	#newproduct-section .uk-card{
+		width: 10rem;
+	}
+
+	#newproduct-section h6{
+		font-size: 13px;
+	}
+
+	#newproduct-section .uk-label{
+		font-size: 12px;
+	}
+
 }
+
 
 
 
