--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -161,8 +161,8 @@ body{
 		font-size: 12px;
 	}
 
-	#footer-bottom div{
-		font-size: 10px;
+	#footer-section .footer-bottom span{
+		font-size: 12px;
 	}
 }
 
