--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -161,6 +161,10 @@ body{
 		font-size: 12px;
 	}
 
+	#footer-section .footer-top span{
+		font-size: 14px;
+	}
+
 	#footer-section .footer-bottom span{
 		font-size: 12px;
 	}
