--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,5 +1,5 @@
 body{
-	background-color: #F0F2F5;
+	background-color: #F7F8FD;
 }
 .help_line{
 	text-transform: capitalize;
@@ -21,17 +21,17 @@ body{
 }
 
 #bottom-navbar .uk-navbar-container {
-	height: 40px;
+	height: 55px;
 }
 #bottom-navbar .uk-container {
-	height: 40px;
+	height: 55px;
 }
 #bottom-navbar .uk-navbar-nav {
-	height: 40px;
+	height: 55px;
 }
 #bottom-navbar .uk-navbar-nav>li>a {
-	padding-bottom: 40px;
-	color: #fff;
+	padding-bottom: 55px;
+	color: #000;
 	text-transform: capitalize;
 	font-size: 15px;
 }
@@ -92,13 +92,13 @@ body{
 
 
 
-#allproducts-section .uk-card{
-		width: 15rem;
-}
-
-#newproduct-section .uk-card{
+/*#allproducts-section .uk-card{
 	width: 15rem;
-}
+}*/
+
+/*#newproduct-section .uk-card{
+	width: 15rem;
+}*/
 
 
 
@@ -122,7 +122,7 @@ body{
 	}
 
 	#allproducts-section .uk-card{
-		width: 10rem;
+		/*width: 10rem;*/
 	}
 
 	#allproducts-section h6{
@@ -141,9 +141,9 @@ body{
 		font-size: 12px;
 	}
 
-	#newproduct-section .uk-card{
+	/*#newproduct-section .uk-card{
 		width: 10rem;
-	}
+	}*/
 
 	#newproduct-section h6{
 		font-size: 13px;
