--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -46,18 +46,9 @@ body{
 	text-decoration: none;
 	color: #696969;
 }
-#category-section img {
-	width: 45px;
-}
 
 #category-section p{
-	background-color: #fff; 
-	border-radius: 4px; 
-	padding-top: 15px; 
-	padding-bottom: 15px; 
-	border-top: 1px solid #FFC107;
-	font-size: 13px;
-	font-weight: 500;
+	 color: #3a3a3a;
 }
 
 #category-section p:hover{
